<resources>
    <string name="app_name">My Bus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_main">My Bus</string>
    <string name="section_format">This is the new fragment: %1$d</string>
    <string name="tab_text_1">Search</string>
    <string name="tab_text_2">Schedule</string>
    <string name="tab_text_3">Nearby</string>
    <string name="tab_text_4">Details</string>

    <string name="journey_end">Journey End</string>
    <string name="journey_start">Journey Start</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="time_range">Time Range</string>
    <string name="dates">Dates</string>
    <string name="journey">Journey</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <!--route spinner in fragment_schedule-->
    <string name="route_prompt">Select the Route</string>
    <string name="route_search_prompt">Select Route</string>

    <string-array name="route_arrays">
        <item>Route 177 - Kaduwela Kollupitiya</item>
        <item>Route 170 - Kaduwela Kotuwa</item>
        <item>Route 190 - Kaduwela Malabe</item>
        <item>Riute 163 - Kaduwela Biyagama</item>
        <item>Route 152 - Kaduwela Mirihana</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable Auto Update</string>
    <string name="pref_description_social_recommendations">
    </string>

    <string name="pref_title_display_name">Device name</string>
    <string name="pref_default_display_name">Google Pixel 2</string>

    <string name="pref_title_add_friends_to_messages">Language</string>
    <string-array name="pref_example_list_titles">
        <item>English</item>
        <item>Sinhala</item>
        <item>Tamil</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>1 hour</item>
        <item>Daily</item>
        <item>Monthly</item>
        <item>Yearly</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Enable notifications</string>

    <string name="pref_title_ringtone">Notification tone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="about_string">This Application consists of four tabs called Search , Schedule , Nearby, Details. \n In Search you can find bus for the journey by entering destination. Also can filter according to Date and time.\n In Schedule tab you can find bus time table according to the searched route depending on the daily schedule, \n In near by tab, you can find suitable bus near the your location. \n Once you have entered the search you will get bus details from which you can obtain the route details.
                                </string>

</resources>