<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lk.mlbcoders.mybus.SearchBusFragment"
    android:id="@+id/search_bus_main_frame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/journey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/picker_journey_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_form_start_end"
                android:layout_marginEnd="@dimen/margin_form_start_end"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/journey_start" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/picker_journey_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_form_start_end"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/journey_end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/time_range"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/picker_time_range_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_form_start_end"
                android:layout_marginEnd="@dimen/margin_form_start_end"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/from" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/picker_time_range_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_form_start_end"
                android:layout_marginEnd="@dimen/margin_form_start_end"
                android:layout_marginTop="5dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/to" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/dates"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="@dimen/margin_form_start_end"
                android:layout_marginEnd="@dimen/margin_form_start_end">

                <Button
                    android:id="@+id/btn_date_mon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Mon"
                    android:textSize="@dimen/search_bus_date_text_size" />

                <Button
                    android:id="@+id/btn_date_tue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Tue"
                    android:textSize="@dimen/search_bus_date_text_size" />

                <Button
                    android:id="@+id/btn_date_wed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Wed"
                    android:textSize="@dimen/search_bus_date_text_size" />

                <Button
                    android:id="@+id/btn_date_Thu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Thu"
                    android:textSize="@dimen/search_bus_date_text_size" />

                <Button
                    android:id="@+id/btn_date_Fri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Fri"
                    android:textSize="@dimen/search_bus_date_text_size" />

                <Button
                    android:id="@+id/btn_date_Sat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Sat"
                    android:textSize="@dimen/search_bus_date_text_size" />

                <Button
                    android:id="@+id/btn_date_Sun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Sun"
                    android:textSize="@dimen/search_bus_date_text_size" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_search_bus_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/search" />
    </LinearLayout>
</FrameLayout>
